# agent-langgraph

backend/: .env.example  .gitignore  README.md  human_in_the_loop_fixed.py  langgraph.json  main.py  pyproject.toml
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ArtifactViewer.tsx  AutoScroll.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPage.tsx  ScrollToBottom.tsx  Sidebar.tsx  icon.tsx
frontend/src/components/charts/: ChartRenderer.tsx  chart-utils.ts  drug-signature-table.tsx  enrichment-chart.tsx  gene-heatmap.tsx  heatmap-components.tsx  heatmap-filters.ts  l1000.tsx  pca-plot.tsx  use-tooltip.ts  volcano-plot-chart.tsx  x2k-kinases-chart.tsx  x2k-network-chart.tsx  x2k-protein-network-chart.tsx  x2k-table.tsx  x2k-transcription-factors-chart.tsx
frontend/src/components/icons/: alert-error-solid.tsx  alert-warning.tsx  analysis.tsx  analyze.tsx  and.tsx  archive.tsx  arrow-down.tsx  arrow-left.tsx  arrow-right.tsx  arrow-up.tsx  at-sign.tsx  bar-chart.tsx  beaker.tsx  building.tsx  calendar.tsx  check-circle-dash.tsx  check-circle-solid.tsx  check-small.tsx  check-solid.tsx  checked-green.tsx  checked-strong.tsx  chevron-up-down.tsx  close.tsx  cog.tsx  columns.tsx  (+103 more)
frontend/src/hooks/: use-assistant.ts  use-chart.ts  use-conversations.ts  use-interrupt.ts  use-thread.ts
frontend/src/lib/: contants.ts  langchain.ts  utils.ts
frontend/src/providers/: assistant-provider.tsx  conversation-provider.tsx  index.ts
frontend/src/types/: artifact.ts  chart.ts  conversations.ts
(+30 files in other folders)
