[tool.poetry]
name = "deep-agents-test"
version = "0.1.0"
description = "Deep Agents test project with human-in-the-loop interrupts"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^1.0.0"
deepagents = "^0.1.0"
langgraph = "^1.0.0"
anthropic = "^0.69.0"
openai = "^1.0.0"
langchain-openai = "^1.0.0"
langchain-anthropic = "^1.0.0"
python-dotenv = "^1.0.0"
langsmith = "^0.3.45"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
langgraph-cli = {extras = ["inmem"], version = "^0.4.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
